fixed z-index issue when both MainMenu and ProductListFilter are displayed

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -88,7 +88,7 @@
 }
 
 .z20 {
-  z-index: 10;
+  z-index: 20;
 }
 
 .z110 {
