--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -16,6 +16,7 @@ nav {
   list-style: none;
   font-size: 1em;
   justify-content: space-around;
+  min-height: 2.5em;
 }
 
 .navbar-items li {
